About section done

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
                 <h1>How to become a
                     better designer?</h1>
                 <p>A challenge to improve your product design skills by solving problems in your daily life.
-                    <span>
-                        <!-- <img src="./assets/img/rocket.png" alt="rocket"> -->
-                    </span>
+                        <img src="./assets/img/rocket.png" alt="rocket">
                 </p>
                 <h4>Scroll to see more —</h4>
             </article>
@@ -26,7 +24,58 @@
     <main>
         <img src="./assets/img/images.jpg" alt="multiple webapp -site designs">
         <div class="content">
-
+            <section class="about">
+                <article>
+                    <h2>Every idea
+                        <img src="./assets/img/idea.png" alt="lightbuld">
+                        starts with a need
+                    </h2>
+                    <p>Earlier this year (January 2018). I started to think about how I could improve my design skills and attract more customers. I wanted to start designing some ideas that for a long time I had only on paper and stored on my cell phone, I decided to look for some challenge, something that makes more sense with what I thought. I saw that many designers (especially in dribbble) made a daily user interface, I really liked the idea, but the problem was that the result was just something nice and did not solve any problem.</p>
+                </article>
+                <h2>After several weeks of sticking to this
+                    challenge, I learned a lot</h2>
+                <div>
+                    <article class="card">
+                        <img src="./assets/img/title02.svg" alt="">
+                        <div>
+                            <h4>Start with asking why</h4>
+                            <p>You will start seeing things differently and
+                                coming up with more effective ways of achieving
+                                goals.</p>    
+                        </div>
+                    </article>
+                    <article class="card">
+                        <img src="./assets/img/title01.svg" alt="">
+                        <div>
+                            <h4>Your ideas will have more value</h4>
+                            <p>By looking at problems from a different
+                                perspective, your ideas will be fresher and more
+                                valuable.</p>    
+                        </div>
+                    </article>
+                </div>
+                <div>
+                    <article class="card">
+                        <img src="./assets/img/title03.svg" alt="">
+                        <div>
+                            <h4>Design solutions with love</h4>
+                            <p>Only when you experience a problem yourself do
+                                you understand the frustration of the users and
+                                resolve to end it.</p>    
+                        </div>
+                    </article>
+                    <article class="card">
+                        <img src="./assets/img/title04.svg" alt="">
+                        <div>
+                            <h4>Share and show your work</h4>
+                            <p>As designers, we are often afraid of showing
+                                work that’s not finished or doesn’t look perfect.
+                                You will learn to accept feedback and learn from
+                                it.</p>    
+                        </div>
+                    </article>
+                </div>
+            </section>
         </div>
     </main>
     <footer></footer>
