Challenges section done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <section>
+        <section class="hero">
             <h3>TheDesignProject</h3>
             <p>by a WebDesigner</p>
             <article>
@@ -73,6 +73,52 @@
                                 You will learn to accept feedback and learn from
                                 it.</p>    
                         </div>
+                    </article>
+                </div>
+            </section>
+            <section class="challenges">
+                <h3>Are you ready? Let’s go!!</h3>
+                <p>The challenge lasts 30 days. On each of those days you will have
+                    to create a solution to any problem you yourself are facing and
+                    show the result to the community.</p>
+                <div class="challenge">
+                    <img src="./assets/img/step01.png" alt="">
+                    <article>
+                        <p class="number">01</p>
+                        <img src="./assets/img/step01.svg" alt="">
+                        <h4>Find your problem</h4>
+                        <p class="text">It has to be a problem that’s personally affecting or affected you, like finding your keys, calling a taxi or even remembering something. Open your eyes, look around you carefully and pay close attention to your surroundings.</p>
+                    </article>
+                </div>
+                <div class="challenge">
+                    <img src="./assets/img/step02.png" alt="">
+                    <article>
+                        <p class="number">02</p>
+                        <img src="./assets/img/step02.svg" alt="">
+                        <h4>Think about the solution</h4>
+                        <p class="text">It's time to look for solutions. What can you do to solve these problems? It's time to think out
+                            of the box, grab your notebook and start writing down all the ideas that come to mind.</p>
+                    </article>
+                </div>
+                <div class="challenge">
+                    <img src="./assets/img/step03.png" alt="">
+                    <article>
+                        <p class="number">03</p>
+                        <img src="./assets/img/step03.svg" alt="">
+                        <h4>Design your proposal</h4>
+                        <p class="text">How can design help solve your problem? It's time to think about features and functionality,
+                            and then start designing. Don’t forget to always ask yourself: Would I actually use this?</p>
+                    </article>
+                </div>
+                <div class="challenge">
+                    <img src="./assets/img/step04.png" alt="">
+                    <article>
+                        <p class="number">04</p>
+                        <img src="./assets/img/step04.svg" alt="">
+                        <h4>Share your work</h4>
+                        <p class="text">Share your design on instagram or dribbble with the hashtag #thedesignproject Remember to
+                            explain what the problem was, how you came up with the solution and how the design
+                            achieves it. Find out what people have to say about it.</p>
                     </article>
                 </div>
             </section>
