--- a/index.html
+++ b/index.html
@@ -122,8 +122,20 @@
                     </article>
                 </div>
             </section>
+            <!-- <section class="subscribe">
+                <h3></h3>
+                <p></p>
+                <form action="">
+                    <input type="email">
+                    <button></button>
+                </form>
+            </section> -->
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Created with Love by a Webdesigner
+            <img src="./assets/img/love.png" alt="">
+        </p>
+    </footer>
 </body>
 </html>
