--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
                     </article>
                 </div>
             </section>
-            <!-- <section class="subscribe">
-                <h3></h3>
-                <p></p>
+            <section class="subscribe">
+                <h3>Do you like this challenge?</h3>
+                <p>Subscribe to be the first to hear about updates, tips and recommendations!</p>
                 <form action="">
-                    <input type="email">
-                    <button></button>
+                    <input type="email" placeholder="Write your email here">
+                    <button type="submit" >Subscribe</button>
                 </form>
-            </section> -->
+            </section>
         </div>
     </main>
     <footer>
